--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -2,9 +2,7 @@
 @use "../colors" as *;
 .App {
   position: absolute;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
   z-index: -1;
-  background: linear-gradient(to right, $primary, $secondary);
-  overflow-x: hidden;
+  overflow-x: scroll;
 }
