--- a/src/components/Landing.scss
+++ b/src/components/Landing.scss
@@ -2,7 +2,7 @@
 
 .landing {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   display: flex;
   position: sticky;
   top: 0;
@@ -10,6 +10,13 @@
   flex-direction: row;
   overflow: hidden;
   z-index: -1;
+}
+.gradient {
+  position: fixed;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to right, $primary, $secondary);
 }
 
 .landing-text {
