--- a/src/components/sectionContainer.scss
+++ b/src/components/sectionContainer.scss
@@ -5,6 +5,7 @@
   background-color: white;
   border-radius: 50px 0px 0px 0px;
   margin-left: 2em;
+  width: calc(100% - 2em);
   padding: 2em;
   z-index: 1;
 }
