--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,10 @@
 @use "./layout";
 @use "./font";
+* {
+  box-sizing: border-box;
+}
 
 body {
-  box-sizing: border-box;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
